# exceptions-for-c

./: CMakeLists.txt  LICENSE  README.md
src/: exception.c  exception.h
